src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.bytemd {
    height: calc(100vh - 350px);
    min-height: 200px;
    border-radius: 6px;
    padding: 1px;
    border: 1px solid #d0d7de;
}
.bytemd:focus-within {
    border-color: #0969da;
    box-shadow: inset 0 0 0 1px #0969da;
}
.is-invalid .bytemd {
    border-color: #cf222e;
}
.is-invalid .bytemd:focus-within {
    border-color: #cf222e;
    box-shadow: 0 0 0 3px rgb(164 14 38 / 40%);
}
.bytemd .bytemd-toolbar {
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
}
.bytemd
.bytemd-toolbar-icon.bytemd-tippy.bytemd-tippy-right:nth-of-type(1),
.bytemd
.bytemd-toolbar-icon.bytemd-tippy.bytemd-tippy-right:nth-of-type(4) {
    display: none;
}
.bytemd .bytemd-status {
    display: none;
}
.bytemd-fullscreen.bytemd {
    z-index: 100;
}
.tippy-box {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
      Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
}

